<resources>
    <string name="app_name">工作日志</string>

    <string name="work_log">工作日志</string>
    <string name="save">保存</string>
    <string name="more">更多</string>
    <string name="update">修改</string>
    <string name="export_to_word">导出为word</string>
    <string name="delete">删除</string>

    <string name="title_text_1">一、今日主要工作</string>
    <string name="subtitle_text_1">（一）今日工作</string>
    <string name="subtitle_text_2">（二）今日拜访</string>
    <string name="subtitle_text_3">（三）今日沟通</string>
    <string name="subtitle_text_4">（四）今日备忘</string>
    <string name="title_text_2">二、明日计划</string>
    <string name="title_text_3">三、问题与体会</string>

</resources>
