<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/click_to_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        >
        <!--android:layout_marginTop="55dp"-->
        <LinearLayout
            android:id="@+id/popup_anima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:elevation="10dp">
            <TextView
                android:id="@+id/tx_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/update"/>
            <View
                style="@style/line_style"/>
            <TextView
                android:id="@+id/tx_2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/export_to_word"/>
            <View
                style="@style/line_style"/>
            <TextView
                android:id="@+id/tx_3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/delete"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/line_bg"/>
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="取消"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>