<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <TextView
            android:id="@+id/tv_month_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_month_day"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="12dp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_lunar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:text="@string/more"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_item"
                android:elevation="1dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_log"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2017年2月13日  星期一  晴"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_1"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_text_1"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1、×××××××××。\n2、×××××××××。\n3、×××××××××。"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_text_2"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_visits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1、×××××××××。\n2、×××××××××。"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_text_3"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_phoneComms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="与×××、×××、×××等沟通。"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_text_4"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_cheats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="×××××××××"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_2"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/tv_planss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="×××××××××"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_3"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/tv_conclusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="×××××××××"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
